# config2args

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  rust.yml
src/: main.rs
